# Servi-o-de-consumo-do-Portal-da-transparencia

./: manage.py  pyproject.toml
api_prestcontas/: asgi.py  settings.py  urls.py  wsgi.py
prestcontas_api/: admin.py  apps.py  models.py  views.py
prestcontas_api/migrations/: 0001_initial.py
prestcontas_api/templates/instrumento/: instrumento.html
